--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,13 +44,13 @@
             android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Inciar Sesión" />
+            android:text="@string/Iniciar_Sesion" />
 
         <Button
             android:id="@+id/signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Registrarse" />
+            android:text="@string/Registrarse" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
