--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/m"
+    android:background="@drawable/z"
     tools:context=".Splash">
 
     <ImageView
@@ -17,7 +17,7 @@
         android:src="@drawable/icon"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
+        app:layout_constraintHorizontal_bias="0.912"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -33,8 +33,8 @@
         android:id="@+id/textView4"
         android:layout_width="185dp"
         android:layout_height="61dp"
-        android:fontFamily="sans-serif-condensed"
-        android:text="@string/Bienvenido"
+        android:fontFamily="serif"
+        android:text="Bienvenid@s a"
         android:textColor="#B2000000"
         android:textColorHint="#0B0A0A"
         android:textSize="25sp"
@@ -54,7 +54,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
-        android:fontFamily="sans-serif-condensed-medium"
+        android:fontFamily="casual"
         android:text="ChatApp"
         android:textColor="#B2000000"
         android:textSize="60sp"
